--- a/restful-tutorial-qconsp2013/pom.xml
+++ b/restful-tutorial-qconsp2013/pom.xml
@@ -27,10 +27,6 @@
       <artifactId>jersey-container-grizzly2-http</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-moxy</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-client</artifactId>
       <version>2.6</version>
@@ -46,7 +42,11 @@
       <version>4.9</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-moxy</artifactId>
+      <version>2.7</version>
+    </dependency>
 
   </dependencies>
 
